Made scroll bar always visible to avoid annoying page resizing
Particularly, when extending the field sets on index.html or going through the various options on demo.html, the scroll bar appearing would cause jarring transitions. Having it always shown fixes this issue.

--- a/styles/global.css
+++ b/styles/global.css
@@ -9,6 +9,7 @@ body{
     flex-direction: column;
     min-height: 100vh;
     font-family: calibri;
+    overflow-y: scroll; /* Always show scroll bar to avoid page resizing itself */
 }
 
 
